--- a/OB-BE-dotnet-auth/appsettings.Development.json
+++ b/OB-BE-dotnet-auth/appsettings.Development.json
@@ -1,9 +1,22 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:book-db.database.windows.net,1433;Initial Catalog=claudia-auth-db;Persist Security Info=False;User ID=adminadmin;Password=EcomP@ssw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Trace"
     }
+  },
+  "AllowedHosts": "*",
+  "AuthorizationServer": {
+    "Address": "https://localhost:5001"
+  },
+  "Service": {
+    "Name": "AuthService",
+    "ClientId": "AuthService",
+    "ClientSecret": "ClientSecret"
+  },
+  "Certificate": {
+    "Password": "password"
   }
 }
