--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,5 +30,5 @@ jobs:
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - run: |
-          docker build . -t acronboarding.azurecr.io/claudia-auth:${{ github.sha }}
-          docker push acronboarding.azurecr.io/claudia-auth:${{ github.sha }}
+          docker build . -t acronboarding.azurecr.io/claudia-auth:latest
+          docker push acronboarding.azurecr.io/claudia-auth:latest
