--- a/OB-BE-dotnet-auth/kubernetes-all.yml
+++ b/OB-BE-dotnet-auth/kubernetes-all.yml
@@ -28,7 +28,7 @@ spec:
             - name: ConnectionStrings__DefaultConnection
               valueFrom:
                 secretKeyRef:
-                  name: secret-claudia
+                  name: secret-claudia-auth
                   key: extra
           ports:
           - containerPort: 80
