--- a/OB-BE-dotnet-auth/secret-claudia-auth.yml
+++ b/OB-BE-dotnet-auth/secret-claudia-auth.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secret-claudia
+  name: secret-claudia-auth
 # type: kubernetes.io/service-account-token
 data:
   # You can include additional key value pairs as you do with Opaque Secrets
