--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,5 +30,5 @@ jobs:
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - run: |
-          docker build -f OB-BE-dotnet-auth/Dockerfile . -t claudialukita/claudia-auth:latest
+          docker build -f OB-BE-dotnet-auth/Dockerfile . -t acronboarding.azurecr.io/claudia-auth:latest
           docker push acronboarding.azurecr.io/claudia-auth:latest
